# build-talks

./: .gitignore  README.md  build-talks.py  pyproject.toml  recordings.json  talks.csv
src/build_talks/: __init__.py  __main__.py  cli.py  config.py  ffmpeg.py  notion.py  recipes.py  render.py  segment.py  talks.py  transcribe.py  upload.py
